# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  catalog.json  docker-compose.yaml
.claude/skills/cerebras/: SKILL.md
.claude/skills/clerk-user-authentication-app-router-static-output/: SKILL.md
backend/: db.py  main.py  pyproject.toml
backend/models/: auth.py  chat.py  documents.py
backend/routes/: auth.py  chat.py  documents.py
backend/services/: auth_service.py  chat_service.py  document_service.py
backend/tests/: test_auth.py  test_chat.py  test_documents.py  test_main.py
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  vitest.config.ts
frontend/app/: chat.tsx  document-preview.tsx  globals.css  layout.tsx  nda-chat.tsx  nda-form.tsx  nda-preview.tsx  page.tsx  providers.tsx
frontend/app/auth/: page.tsx
frontend/app/auth/reset-password/: page.tsx
frontend/app/components/: app-header.tsx  disclaimer-banner.tsx
frontend/app/documents/: page.tsx
frontend/app/lib/: auth.ts  chat-helpers.test.ts  document-types.ts  nda-chat-helpers.test.ts  nda-chat-helpers.ts  nda-document.test.ts  nda-document.ts
scripts/: start-linux.sh  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-mac.sh  stop-windows.ps1
templates/: LICENSE.txt
terraform/gcp/: main.tf  variables.tf
