[project]
name = "prelegal-backend"
version = "0.1.0"
description = "Prelegal V1 backend — FastAPI app serving the static-exported frontend and (later) AI-driven document workflows."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "python-dotenv>=1.0",
    "litellm>=1.83.14",
    "pydantic>=2.12.5",
    "PyJWT>=2.10",
    "bcrypt>=4.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pytest>=8.3",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
